full phase lunar cycle

--- a/moon_brightness_temp_sim_v5-full_phase_heat_plots.ipynb
+++ b/moon_brightness_temp_sim_v5-full_phase_heat_plots.ipynb
@@ -112,93 +112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe99758a-9fb1-4141-9719-8dfddb8a4ef4",
-   "metadata": {},
-   "source": [
-    "### Test of generate_moon_facets_areas\n",
-    "If the radius is 1 the sum of all facet areas should be 2pi for a hemisphere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c09d5b4c-4663-47b6-b1f8-85bc38a62f72",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape =  (360, 180) area of surface =  12.566370614359172 , Difference: 4pi - area_of_facets =  0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "moon_radius_test = 1  # Radius of the Moon in meters\n",
-    "area_of_facets_test = lunar_facets_areas(moon_radius_test)\n",
-    "print('shape = ', area_of_facets_test.shape, 'area of surface = ' , np.sum(area_of_facets_test), ', Difference: 4pi - area_of_facets = ', 4 * np.pi - np.sum(area_of_facets_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7f113ae8-7982-4efb-9a39-6cbc7c528fd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(360, 180)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "area_of_facets_test.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ae12729-64d7-458e-bdcf-beba5904a032",
-   "metadata": {},
-   "source": [
-    "### Implement the funciton with the radius of the Moon in meters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5d890a18-cba2-4bf6-aba3-8ba6d8b94f4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moon_radius = 1.737e6  # Radius of the Moon in meters\n",
-    "area_of_facets = lunar_facets_areas(moon_radius)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "46473022-790c-489c-9131-e2293624564e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.abs(2*np.pi*moon_radius**2 - np.sum(area_of_facets)), np.sqrt(np.abs(2*np.pi*moon_radius**2 - np.sum(area_of_facets)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ac264ad-6b77-4897-af4f-29bbccc567cb",
-   "metadata": {},
-   "source": [
-    "The area is off by a bit, how much? a grid approximately 257 m * 257 m in area, I think thats acceptable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ebad241b-35b9-4706-84e6-611cc6bc33fb",
    "metadata": {},
    "source": [
@@ -244,220 +157,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0d325566-c62c-48fc-a913-5c325e454b32",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(360, 180)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # Call the function\n",
-    "zenith_angle_array_test = calculate_zenith_angle(0)\n",
-    "\n",
-    "# # check the shape\n",
-    "print(zenith_angle_array_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96904bf8-c655-4c29-8434-51b26a0e7350",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### zenith_angle sanity checks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "67560c9b-7d3c-4ad3-8ce7-17c83b8b6413",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([89.50001904, 88.50005713, 87.50009525, 86.50013344, 85.5001717 ,\n",
-       "       84.50021007, 83.50024857, 82.50028722, 81.50032605, 80.50036508,\n",
-       "       79.50040434, 78.50044386, 77.50048366, 76.50052377, 75.50056421,\n",
-       "       74.50060502, 73.50064623, 72.50068787, 71.50072997, 70.50077256,\n",
-       "       69.50081568, 68.50085937, 67.50090367, 66.5009486 , 65.50099423,\n",
-       "       64.50104059, 63.50108772, 62.50113569, 61.50118453, 60.50123431,\n",
-       "       59.50128508, 58.50133691, 57.50138985, 56.50144399, 55.50149939,\n",
-       "       54.50155614, 53.50161432, 52.50167402, 51.50173534, 50.50179839,\n",
-       "       49.50186328, 48.50193013, 47.50199908, 46.50207027, 45.50214386,\n",
-       "       44.50222002, 43.50229893, 42.5023808 , 41.50246584, 40.50255431,\n",
-       "       39.50264648, 38.50274262, 37.50284309, 36.50294823, 35.50305844,\n",
-       "       34.50317419, 33.50329597, 32.50342434, 31.50355995, 30.5037035 ,\n",
-       "       29.50385582, 28.50401784, 27.50419061, 26.50437537, 25.50457354,\n",
-       "       24.50478675, 23.50501694, 22.50526638, 21.50553776, 20.50583429,\n",
-       "       19.50615985, 18.50651915, 17.50691798, 16.50736352, 15.50786482,\n",
-       "       14.50843341, 13.50908422, 12.50983697, 11.51071821, 10.5117646 ,\n",
-       "        9.51302816,  8.51458532,  7.5165531 ,  6.51912008,  5.52261094,\n",
-       "        4.52763578,  3.53548992,  2.54947864,  1.58112077,  0.70710229,\n",
-       "        0.70710229,  1.58112077,  2.54947864,  3.53548992,  4.52763578,\n",
-       "        5.52261094,  6.51912008,  7.5165531 ,  8.51458532,  9.51302816,\n",
-       "       10.5117646 , 11.51071821, 12.50983697, 13.50908422, 14.50843341,\n",
-       "       15.50786482, 16.50736352, 17.50691798, 18.50651915, 19.50615985,\n",
-       "       20.50583429, 21.50553776, 22.50526638, 23.50501694, 24.50478675,\n",
-       "       25.50457354, 26.50437537, 27.50419061, 28.50401784, 29.50385582,\n",
-       "       30.5037035 , 31.50355995, 32.50342434, 33.50329597, 34.50317419,\n",
-       "       35.50305844, 36.50294823, 37.50284309, 38.50274262, 39.50264648,\n",
-       "       40.50255431, 41.50246584, 42.5023808 , 43.50229893, 44.50222002,\n",
-       "       45.50214386, 46.50207027, 47.50199908, 48.50193013, 49.50186328,\n",
-       "       50.50179839, 51.50173534, 52.50167402, 53.50161432, 54.50155614,\n",
-       "       55.50149939, 56.50144399, 57.50138985, 58.50133691, 59.50128508,\n",
-       "       60.50123431, 61.50118453, 62.50113569, 63.50108772, 64.50104059,\n",
-       "       65.50099423, 66.5009486 , 67.50090367, 68.50085937, 69.50081568,\n",
-       "       70.50077256, 71.50072997, 72.50068787, 73.50064623, 74.50060502,\n",
-       "       75.50056421, 76.50052377, 77.50048366, 78.50044386, 79.50040434,\n",
-       "       80.50036508, 81.50032605, 82.50028722, 83.50024857, 84.50021007,\n",
-       "       85.5001717 , 86.50013344, 87.50009525, 88.50005713, 89.50001904])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.degrees(zenith_angle_array_test[180,:]) \n",
-    "# sanity check for what the latitude angles would look like for a sub solar position at theta = 0, longitude, = 0, and phase = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5505d00d-207a-417c-b8a5-1b7b31417529",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# np.degrees(zenith_angle_array[0,225,:]) \n",
-    "# sanity check for what the latitude angles would look like for longitude = 45, and phase = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f0f5cc0f-deff-429e-b2c4-5432a9cad2dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.degrees(zenith_angle_array[45,225,:]) \n",
-    "# sanity check for what the latitude angles would look like for longitude = 45, and phase = 45"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "09204aa3-0f8d-484e-a5c1-58231080629e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.degrees(zenith_angle_array[0,270,:]) \n",
-    "# sanity check for what the latitude angles would look like for longitude = 90, and phase = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "fffa9f4d-3750-4fb5-b363-884911e93a7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.degrees(zenith_angle_array[0,0,:]) \n",
-    "# sanity check for what the latitude angles would look like for longitude = 0, and phase = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "7d1f05fa-569f-46e4-bd47-b8fc6e5d4750",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vector_zenith_angle_array = vector_calculate_zenith_angle(phase_array,\n",
-    "#                                                           latitude_array,\n",
-    "#                                                           longitude_array,\n",
-    "#                                                           declination)\n",
-    "# zenith_angle_array.shape # checking shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "b4bee4d3-e3a1-4711-be60-64a603cb2293",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.sum(vector_zenith_angle_array) == np.sum(zenith_angle_array) \n",
-    "# because they are the essentially the same function, they should result in the same sum of angles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "525a9635-a73f-4134-adb9-aeb6c7839391",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# zenith_angle_array[1,:,:].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3334eae-03bb-4034-add0-63ea82e4ad0d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "5d328692-cbdc-4558-8610-f2ceb5be9c47",
    "metadata": {},
    "source": [
     "## Calculate Heat Input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "611f489d-fa5b-4248-b1f7-2b53eadb014c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def flux_input_func(W_0, zenith_angle_array, albedo, phase_step):\n",
-    "#     \"\"\"\n",
-    "#     - Parameters:\n",
-    "#         - W_0: energy flux W / m**2\n",
-    "#         - zenith_angle_array: array of incident vector angle w.r.t sun\n",
-    "#         - albedo: Lunar Albedo\n",
-    "#         - phase_step: phase ranges from [0,360) degrees\n",
-    "    \n",
-    "#     -Return: the flux input from the Sun. The time is indexed in degrees of phase, which allows isolating the values\n",
-    "#     of latitude and longitude at that specific phase.\n",
-    "#     \"\"\"\n",
-    "#     # Calculate the heat input based on the zenith angle\n",
-    "#     W_t = W_0 * np.clip(np.cos(zenith_angle_array[phase_step, :, :]), 0, None) * (1 - albedo)\n",
-    "#     # the clip returns a 0 for any values less than 0 resulting from an angle greater than 90 degrees\n",
-    "#     # this way no negative heat is introduced.\n",
-    "    \n",
-    "#     return W_t\n",
-    "               \n"
    ]
   },
   {
@@ -486,14 +190,6 @@
     "    \n",
     "    return W_t\n",
     "               \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "125f5744-acd3-4f3b-83c5-128b3bae43bc",
-   "metadata": {},
-   "source": [
-    "#### Solar Irradiance Test"
    ]
   },
   {
@@ -640,71 +336,6 @@
     "# print('function output', flux_input_array[180,:][0], 'manual calculation', (1-albedo) * 1365)\n",
     "# sanity check for when longitude = 0, latitude = 0\n",
     "# if time = 0 then subsolar position is theta = 0, longitude = 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6580d84a-3c6b-452a-a210-60dd2a7c6a12",
-   "metadata": {},
-   "source": [
-    "### Test of Lunar Flux"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98b32026-896b-4da2-9a98-de66f3c13c1e",
-   "metadata": {},
-   "source": [
-    "Combining the functions from flux input and facet areas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "3dbff62e-809c-4b6d-8129-61dd273e00f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# area_of_facets.shape, flux_input_array.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dcf2363a-0b2d-486a-a408-533116d57980",
-   "metadata": {},
-   "source": [
-    "If we are instead interested in the centres of the facets, the flux input needs its ends trimed off the last values in the longitude and latitude values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "1ba30143-e380-4ffe-b634-58bc6955003b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lunar_total_flux = area_of_facets * flux_input_array_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "3053c161-2944-4edf-8530-b3e4037fc301",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # test of the 0 longitude positions\n",
-    "# lunar_total_flux[180]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "89682299-a40e-46ee-afc2-3f88da2ba8e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.sum(lunar_total_flux)"
    ]
   },
   {
@@ -1046,6 +677,8 @@
     "    for second in tqdm(range(0, int(model_run_time), delta_t)): # range(start,stop,step)\n",
     "    # for second in range(0, model_run_time, delta_t): # range(start,stop,step) No tqdm package installed in this env\n",
     "\n",
+    "        # calculate the area of lunar facets along lines of latitude/longitude\n",
+    "        area_of_facets = lunar_facets_areas(moon_radius)\n",
     "        \n",
     "        # Step 1: Initialize Thermal Capacitance\n",
     "        gamma = thermal_capacitance(BasCap, area_of_facets, tau, rho)#.astype(np.float64)\n",
@@ -1082,8 +715,8 @@
     "        heat_transfer_array[:,:,1:-1] = T_n\n",
     "        heat_transfer_array[:,:,-1] = T_f\n",
     "            \n",
-    "        if second % 7080 == 0:\n",
-    "            phase += 1 # phase_step increment to account for a rotating moom\n",
+    "        # if second % 1770 == 0: # number of seconds in 29.5 days divided by 360 divided by 4\n",
+    "        phase += 0.05 # phase_step increment in degrees to account for how much the moon rotates over 354 seconds\n",
     "            \n",
     "    return heat_transfer_array"
    ]
@@ -1157,7 +790,7 @@
     "\n",
     "\n",
     "tau = 0.01 # tau is the thickness of the slice (meters)\n",
-    "delta_t = 360 # time over which each loop calculation is preformed\n",
+    "delta_t = 354 # time over which each loop calculation is preformed\n",
     "model_run_time = 2548800 # simulation run time in seconds\n",
     "\n",
     "# run the function \n",
