reorganizing and adding docstrings

--- a/early_code_versions/moon_brightness_temp_sim_v5-full_phase_heat_plots.ipynb
+++ b/early_code_versions/moon_brightness_temp_sim_v5-full_phase_heat_plots.ipynb
@@ -840,6 +840,10 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
     "\n",
     "# Example data (replace with your actual lunar temperature data)\n",
     "data = heat_transfer_array[:, :, 0]\n",
@@ -1462,7 +1466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
